# MLH-Projects

./: .gitignore  README.md
API/: README.md
API/backboard-give-brain/: README.md  agent.py  pyproject.toml
API/backboard-hello/: agent.py  pyproject.toml
API/backboard-teach-assistant/: README.md  knowledge.txt  pyproject.toml
API/bad-joke-machine/: package-lock.json  package.json
API/context-preserving-assistant/: README.md
API/privacy-aware-rag-bot/backend/: pyproject.toml
API/privacy-aware-rag-bot/backend/app/: main.py
API/privacy-aware-rag-bot/backend/app/api/: chat.py
API/privacy-aware-rag-bot/backend/app/services/: authz.py
API/quiz-game/: README.md  index.html  package-lock.json
API/quiz-game/src/: App.jsx
API/veto-agent/: README.md
Cloud/: README.md
Cloud/Live-Date-Time-Clock/: popup.html
Cloud/The-Awesome-Clock--main/: README.md  popup.js
Cloud/challenges/RESTful_API/simple-rest-api/: main.py  pyproject.toml
GenAI/: README.md
GenAI/auth0-dashboard-login-flow/: README.md
GenAI/campus-rag-fga-assistant/: README.md
GenAI/copilot-packing-list-generator/: index.html  script.js
GenAI/github-veto-agent/: README.md
GenAI/mona-mayhem-copilot-challenges/: README.md
Good/: README.md
Good/better-ai-prompting-for-beginners/: script.js  style.css
Good/financial-literacy-budget-buddy/: README.md  index.html  script.js  style.css
Good/kindness-filter-social-good/: README.md  script.js
Good/mona-mayhem-arena-lab/: README.md  game-loop.js  index.html  player-state.js  script.js  style.css
Good/nonprofit-event-calendar/: README.md  index.html  script.js
api/auth0-login-demo/: README.md  index.html  package-lock.json  package.json
api/backboard-give-brain/: README.md
api/backboard-hello/: README.md  agent.py
api/backboard-teach-assistant/: agent.py
api/bad-joke-machine/: README.md  index.html
api/privacy-aware-rag-bot/: README.md
api/quiz-game/: package.json
cloud/RESTful_API/: README.md
cloud/The-Awesome-Clock--main/: manifest.json
genai/campus-rag-fga-assistant/backend/: pyproject.toml
genai/campus-rag-fga-assistant/backend/app/: documents.py  models.py
genai/cloudinary-ai-photo-remix-studio/: README.md
genai/cloudinary-travel-moodboard-enhanced/: README.md
genai/copilot-packing-list-generator/: README.md  style.css
genai/github-veto-agent/backend/: pyproject.toml
genai/github-veto-agent/backend/app/: main.py
season-launch/: README.md
(+147 files in other folders)
