[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zoelinsg <zoelin.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
pydantic = "^2.13.4"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
